--- a/MudAide.Client/Layout/NavMenu.razor
+++ b/MudAide.Client/Layout/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="equipment">
+                <span class="bi bi-crosshair-nav-menu" aria-hidden="true"></span> Equipment
+            </NavLink>
+        </div>
     </nav>
 </div>
 
